# A-shares-simulator

./: .gitignore  Distribution_design.md  Interview_note.md  MVP_开发计划_BDD.md  README.md  create_tables.sql  database_design.md  influxdb_v2_design.md  order_and_match_engine_design.md  rust_server_design.md
client/: Cargo.toml
client/test_client/: Cargo.toml
client/test_client/src/: main.rs
server_rust/: CONFIG.md  Cargo.toml  MARKET_DATA_INTEGRATION.md  WORKSPACE_DEPENDENCIES.md  config.example.yml  test_config.yml
server_rust/account_management/: Cargo.toml
server_rust/account_management/src/: lib.rs
server_rust/core_entities/: Cargo.toml
server_rust/core_entities/src/: app_config.rs  lib.rs
server_rust/market_data/: Cargo.toml  README.md
server_rust/market_data/examples/: market_data_integration.rs
server_rust/market_data/src/: data_types.rs  database.rs  engine.rs  lib.rs
server_rust/market_data_engine/: Cargo.toml
server_rust/market_data_engine/src/: data_types.rs  database.rs  engine.rs  lib.rs  service.rs
server_rust/market_rules/: Cargo.toml
server_rust/market_rules/src/: lib.rs
server_rust/matching_engine/: Cargo.toml  DESIGN.md  README.md  REFACTOR_SUMMARY.md  SUMMARY.md
server_rust/matching_engine/examples/: basic_usage.rs
server_rust/matching_engine/src/: engine.rs  errors.rs  lib.rs  traits.rs  types.rs
server_rust/order_engine/: ARCHITECTURE.md  Cargo.toml
server_rust/order_engine/src/: engine.rs  lib.rs  order_pool.rs  service.rs
server_rust/order_engine/tests/: integration_test.rs
server_rust/persistence_services/: Cargo.toml
server_rust/persistence_services/src/: lib.rs
server_rust/server_core/: ARCHITECTURE.md  Cargo.toml  PERFORMANCE_TEST_PLAN.md  README.md
server_rust/server_core/docs/: protocol_justification.md
server_rust/server_core/examples/: error_demo_simplified.rs  simple_server.rs
server_rust/server_core/src/: app.rs  client_connection.rs  config.rs  connection_manager.rs  error.rs  frame_decoder.rs  lib.rs  main.rs  message_dispatcher.rs  server.rs
server_rust/server_core/src/performance/: mod.rs
server_rust/server_core/src/transport/: mod.rs
server_rust/tick_generator/: Cargo.toml
server_rust/tick_generator/src/: lib.rs
server_rust/trade_protocal_lite/: Cargo.toml  necessarity_wire_and_trade_msg_design.md
server_rust/trade_protocal_lite/src/protos_generated/: trade_protocal_lite.rs
trade_protocal_lite/: Cargo.toml  build.rs
trade_protocal_lite/src/: errors.rs  lib.rs
trade_protocal_lite/src/protos/: trade_protocol.proto
trade_protocal_lite/src/protos_generated/: mod.rs
tushare_python/: get_all_stocks_basic_info.py  get_daily_basics.py  get_daily_trade_info.py  get_week_month_adj.py  mysql.py
