[package]
name = "market_data_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1.39.0", features = ["full"] }
# 时间处理
chrono = { version = "0.4.30", features = ["serde"] }
# 数字精度
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
# 日志
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# 序列化
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# 数据库
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
# 错误处理
thiserror = "2.0.12"
# 高并发集合
dashmap = "6.1.0"
# 集合
indexmap = "2.9.0"
# 异步trait
async-trait = "0.1.88"
# Workspace内部依赖
core_entities = { path = "../core_entities" } 