[package]
name = "market_data_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { workspace = true }
# 时间处理
chrono = { workspace = true }
# 数字精度
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
# 数据库
sqlx = { workspace = true }
# 错误处理
thiserror = { workspace = true }
# 高并发集合
dashmap = { workspace = true }
# 集合
indexmap = { workspace = true }
# 异步trait
async-trait = { workspace = true }
# Workspace内部依赖
core_entities = { workspace = true } 