[package]
name = "order_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
tokio = { version = "1.45.1", features = ["full"] }
dashmap = "6.1.0"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
parking_lot = "0.12.3"
core_entities = { path = "../core_entities" }
