[package]
name = "server_core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server_core"
path = "src/main.rs"



[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
trade_protocal_lite = { workspace = true }
order_engine = { workspace = true }
matching_engine = { workspace = true }
market_data_engine = { workspace = true }
core_entities = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

# 根据 MVP_开发计划_BDD.md, 消息头可能包含消息类型 (uint16)
# 可能需要一个 crate 来帮助处理字节序 (如网络字节序 BigEndian)
# byteorder = "1" # 如果直接操作字节，而非依赖bytes库的get_u16等方法 

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 